[package]
name = "thongna"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Porameht Khumsombat"]
description = "High-performance Text processing library for Thai language, built with Rust"
exclude = ["notebooks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "thongna"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
lazy_static = "1.4.0"
regex = "1"
