[package]
name = "thongna"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Porameht Khumsombat"]
description = "High-performance Text processing library for Thai language, built with Rust"
exclude = ["notebooks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "thongna"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
lazy_static = "1.4.0"
regex = "1"
anyhow = "1.0.45"
bytecount = "0.6.2"
regex-syntax = "0.6.25"
rayon = "1.5.1"
rustc-hash = "1.1.0"
binary-heap-plus = "0.4.1"
once_cell = "1.18.0"
