[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "thongna"
requires-python = ">=3.8"
description = "High-performance Text processing library for Thai language, built with Rust"
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
