[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "thongna"
requires-python = ">=3.8"
description = "High-performance Text processing library for Thai language, built with Rust"
authors = [{ name = "Porameht Khumsombat" }]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.2.0"
license="Apache Software License 2.0"
[tool.maturin]
features = ["pyo3/extension-module"]
[project.urls]
repository="https://github.com/porameht/thongna"
