[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "thongna"
version = "0.2.3"
requires-python = ">=3.8"
description = "Blazing-fast Thai text processing library powered by Rust"
authors = [
    {name = "Porameht Khumsombat", email = "poramehtkh@gmail.com"}
]
keywords = ["thai", "tokenizer", "nlp", "word-segmentation"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Text Processing :: Linguistic",
]
license = {text = "Apache-2.0"}
readme = "README.md"

[project.urls]
Repository = "https://github.com/porameht/thongna"
"Bug Tracker" = "https://github.com/porameht/thongna/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "_thongna"
python-source = "thongna"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
